# esp-gmf

./: .codespellrc  .pre-commit-config.yaml  README.md  README_CN.md
elements/gmf_ai_audio/: CHANGELOG.md  CMakeLists.txt  idf_component.yml
elements/gmf_ai_audio/examples/aec_rec/: README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s31
elements/gmf_ai_audio/examples/aec_rec/main/: idf_component.yml  main.c
elements/gmf_ai_audio/examples/wwe/: README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s31
elements/gmf_ai_audio/examples/wwe/main/: idf_component.yml  main.c
elements/gmf_ai_audio/include/: esp_gmf_afe.h
elements/gmf_ai_audio/src/: esp_gmf_afe.c  esp_gmf_afe_manager.c
elements/gmf_video/: CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  esp_gmf_video_color_convert.c  esp_gmf_video_crop.c  esp_gmf_video_dec.c  esp_gmf_video_enc.c  esp_gmf_video_fps_cvt.c  esp_gmf_video_overlay.c  esp_gmf_video_param.c  esp_gmf_video_ppa.c  esp_gmf_video_rotate.c  esp_gmf_video_scale.c  idf_component.yml
elements/gmf_video/include/: esp_gmf_video_methods_def.h  esp_gmf_video_param.h  esp_gmf_video_types.h
elements/gmf_video/private_inc/: gmf_video_common.h
elements/gmf_video/src/: esp_gmf_video_crop.c  esp_gmf_video_dec.c  esp_gmf_video_fps_cvt.c  esp_gmf_video_overlay.c  esp_gmf_video_param.c  esp_gmf_video_ppa.c  esp_gmf_video_rotate.c  gmf_video_common.c
gmf_examples/basic_examples/pipeline_play_multi_source_music/main/: CMakeLists.txt  idf_component.yml  play_multi_source_music.c
gmf_examples/basic_examples/pipeline_play_multi_source_music/main/audio_player/: audio_multi_source_player.c  audio_multi_source_player.h
gmf_examples/basic_examples/pipeline_play_multi_source_music/main/command_interface/: audio_commands.c  audio_commands.h
gmf_examples/basic_examples/pipeline_play_multi_source_music/main/common/: audio_config.h  (+1 more)
(+201 files in other folders)
